# ink

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  ink.sln
cmake/: Catch.cmake  FindD3D12.cmake
example/HelloLighting/: HelloLighting.vcxproj  HelloLighting.vcxproj.filters
example/HelloLighting/shader/: light_pixel.hlsl  light_vertex.hlsl  object_pixel.hlsl  object_vertex.hlsl
example/HelloLighting/src/: main.cpp
example/HelloTexture/: HelloTexture.vcxproj  HelloTexture.vcxproj.filters  main.cpp  pixel.hlsl  vertex.hlsl
example/HelloTriangle/: HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters  main.cpp  pixel.hlsl  vertex.hlsl
example/HelloWorld/: HelloWorld.vcxproj  HelloWorld.vcxproj.filters  main.cpp
examples/: CMakeLists.txt
examples/Boxes/: CMakeLists.txt  boxes.hlsl  main.cpp  shader.cpp  shader.hpp
examples/Common/: CMakeLists.txt
examples/Common/ink/: camera.hpp  model.cpp  model.hpp
examples/CookTorrance/: CMakeLists.txt  cook_torrance.hlsl  main.cpp
examples/HelloTexture/: CMakeLists.txt  main.cpp  texture.hlsl
examples/HelloWorld/: CMakeLists.txt  main.cpp  triangle.hlsl
ink/: CMakeLists.txt  ink.vcxproj  ink.vcxproj.filters
ink test/: ink test.vcxproj  main.cpp
ink/include/ink/asset/: image.h
ink/include/ink/core/: assert.h  common.h  error.h  exception.h  exception.hpp  export.hpp  file.h  hash.h  log.h  string.h  window.h  window.hpp
ink/include/ink/math/: matrix.h  matrix.hpp  number.h  quaternion.h  quaternion.hpp  vector.h  vector.hpp
ink/include/ink/render/: color.h  command_buffer.h  command_buffer.hpp  descriptor.h  descriptor.hpp  device.h  device.hpp  pipeline.h  pipeline.hpp  resource.h  resource.hpp  swap_chain.h
ink/src/asset/: image.cpp
ink/src/core/: error.cpp  exception.cpp  file.cpp  hash.cpp  log.cpp  string.cpp  window.cpp
ink/src/render/: command_buffer.cpp  descriptor.cpp  device.cpp  pipeline.cpp  resource.cpp  swap_chain.cpp
inkTest/: inkTest.vcxproj  inkTest.vcxproj.filters
inkTest/math/: matrix2.cpp  vector.cpp
test/: .clang-format  test.vcxproj  test.vcxproj.filters
test/math/: matrix2.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
tests/: CMakeLists.txt
tests/math/: matrix2.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp
